--- a/src/executors/default.yml
+++ b/src/executors/default.yml
@@ -5,7 +5,7 @@ docker:
   - image: <<parameters.docker-image>>
 parameters:
   docker-image:
-    default: cimg/base
+    default: cimg/base:stable
     description: |
       Docker image to use in this executor, defaults to cimg/base
     type: string
